2009-01-11  Jeremy Moskovich  <jeremy@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=16001
        Incorrect assumption that selection is always contiguous LTR.

        Test: editing/selection/extend-selection-bidi.html

        * rendering/RootInlineBox.cpp: (WebCore::RootInlineBox::fillLineSelectionGap):
        Make this function  not assume a contiguous visual LTR selection range.



Canonical link: https://commits.webkit.org/31983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39785 268f45cc-cd09-0410-ab3c-d52691b4dbfc